fixed css for quality-value when mod name wraps to a new line

--- a/mod-picker/app/assets/stylesheets/pages/showMod.scss
+++ b/mod-picker/app/assets/stylesheets/pages/showMod.scss
@@ -43,7 +43,8 @@
 .quality-value {
   font-size: 10px;
   font-weight: 700;
-  padding-top: 0;
+  padding-top: 2px;
+  height: 50px;
 }
 
 .reputation-number {
